repository link added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.cristina-padilla.com/" target="_blank">Cristina Padilla</a>
-    <a href="" target="_blank"><i class="fab fa-github-square"></i></a>
+    <a href="https://github.com/Mama-simba/advice-generator" target="_blank"><i class="fab fa-github-square"></i></a>
     <a href="https://www.linkedin.com/in/cristina-padilla-plasencia/" target="_blank"><i class="fab fa-linkedin"></i></a>
   </div>
 
